k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-backend-deployment
  labels:
    app: svc-metrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: svc-metrics
  template:
    metadata:
      labels:
        app: svc-metrics
    spec:
      containers:
        - name: metrics-backend
          image: okteto.dev/svc-metrics
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2

---
apiVersion: v1
kind: Service
metadata:
  name: metrics-backend-service
spec:
  selector:
    app: svc-metrics
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
