k8s/postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metrics-postgres
  template:
    metadata:
      labels:
        app: metrics-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15.2 
          imagePullPolicy: Always
          ports:
            - containerPort: 5432 
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: metrics-postgredb
      volumes:
        - name: metrics-postgredb
          persistentVolumeClaim:
            claimName: metrics-postgres-pv-claim

---
apiVersion: v1
kind: Service
metadata:
  name: metrics-postgres # Sets service name
  labels:
    app: metrics-postgres # Labels and Selectors
spec:
  ports:
    - port: 5432 # Sets port to run the postgres application
  selector:
    app: metrics-postgres
